samples/_failures_safe/1761296459_a5b904_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7779fa4a.c: In function ‘main’:
./samples/SAFE/__tmp_7779fa4a.c:183:5: error: expected expression at end of input
  183 |     if (len >
      |     ^~
./samples/SAFE/__tmp_7779fa4a.c:183:5: error: expected declaration or statement at end of input
